--- a/website/package.json
+++ b/website/package.json
@@ -11,24 +11,22 @@
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
-    "@vercel/postgres": "^0.5.0",
-    "autoprefixer": "10.4.15",
-    "bcrypt": "^5.1.1",
+    "autoprefixer": "^10.4.19",
+    "chart.js": "^4.4.2",
     "clsx": "^2.0.0",
-    "next": "^14.0.2",
+    "next": "^14.2.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
-    "zod": "^3.22.2"
+    "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.1",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
     "@vercel/style-guide": "^5.0.1",
-    "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "9.0.0",
