--- a/api/package.json
+++ b/api/package.json
@@ -1,16 +1,18 @@
 {
   "type": "commonjs",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "express": "^4.19.2",
     "ioredis": "^5.3.2",
     "nodemon": "^3.1.0",
-    "redis": "^4.6.13"
+    "redis": "^4.6.13",
+    "tsc": "^2.0.4"
   },
   "name": "api",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "npx tsc && node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
