--- a/api/package.json
+++ b/api/package.json
@@ -5,8 +5,7 @@
     "express": "^4.19.2",
     "ioredis": "^5.3.2",
     "nodemon": "^3.1.0",
-    "redis": "^4.6.13",
-    "tsc": "^2.0.4"
+    "redis": "^4.6.13"
   },
   "name": "api",
   "version": "1.0.0",
