--- a/website/package.json
+++ b/website/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.5.7",
     "autoprefixer": "^10.4.19",
     "chart.js": "^4.4.2",
+    "chartjs-adapter-luxon": "^1.3.1",
     "clsx": "^2.0.0",
     "luxon": "^3.5.0",
     "next": "^14.2.2",
