--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -16,3 +16,4 @@ framework = arduino
 lib_deps = 
 	beegee-tokyo/DHT sensor library for ESPx@^1.19
 	adafruit/Adafruit BME680 Library@^2.0.5
+	playingwithfusion/PWFusion_Max31865@^2.1.0
